--- a/index.html
+++ b/index.html
@@ -11,31 +11,25 @@
         <section>
             <div class="index">
                 <button class="index__button">
-                    <a href="/Selhome/selhome.html">SELHOME</a>
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 21/01 ► A basic message - base.html">Basic pop-up</a>
                 </button>
                 <button class="index__button">
-                    <a href="/ADY/ady.html">ADY</a>
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 21/03 ► A custom positioned dialog - base.html">Positioned auto-close</a>
                 </button>
                 <button class="index__button">
-                    <a href="/January 9-12, 2023/zyro-ginza.html">Zyro Ginza</a>
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 21/06 ► Custom dynamic modal - base.html">Customizable pop-up</a>
                 </button>
                 <button class="index__button">
-                    <a href="/Zyro Kodah/zyro-kodah.html">Zyro Kodah</a>
+                    <a href="">Multiple items with autoplay</a>
                 </button>
                 <button class="index__button">
-                    <a href="/Zyro Oakland/zyro-oakland.html">Zyro Oakland</a>
+                    <a href="">Center mode</a>
                 </button>
                 <button class="index__button">
-                    <a href="/Zyro Regis/zyro-regis.html">Zyro Regis</a>
+                    <a href="">Add & remove slides</a>
                 </button>
                 <button class="index__button">
-                    <a href="/Zyro Anir/zyro-anir.html">Zyro Anir</a>
-                </button>
-                <button class="index__button">
-                    <a href="/Zyro Marlow/zyro-marlow.html">Zyro Marlow</a>
-                </button>
-                <button class="index__button">
-                    <a href="/EXAM/exam.html">→ EXAM ←</a>
+                    <a href="">Slider sync</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
