update February 23, 2023 | JS DOM tasks

--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
                     <a href="/03 ■► JS DOM/tasks/2023 → 02 → 21/06 ► Custom dynamic modal - base.html">Customizable pop-up</a>
                 </button>
                 <button class="index__button">
-                    <a href="">Multiple items with autoplay</a>
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item - base.html">Single item slider</a>
                 </button>
                 <button class="index__button">
-                    <a href="">Center mode</a>
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/04 ► multiple items with autoplay - base - Copy.html">Multiple items with autoplay</a>
                 </button>
                 <button class="index__button">
-                    <a href="">Add & remove slides</a>
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/05 ► center mode - base.html">Center mode</a>
                 </button>
                 <button class="index__button">
-                    <a href="">Slider sync</a>
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/06 ► add & remove slides - base - Copy.html">Add & remove slides</a>
+                </button>
+                <button class="index__button">
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/07 ► slider sync - base - Copy.html">Slider sync</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
