--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.html
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Single image</title>
         <link rel="stylesheet" href="./01 ► single item slide.css">
     </head>
     <body>
@@ -32,6 +32,15 @@
             <!-- slide 6 -->
             <div class="slide">
                 <img src="./asset-library/img-06.jpg" alt="img-06">
+            </div>
+
+            <div class="dots">
+                <input type="radio" name="slides" class="dots__radios slide-01" checked>
+                <input type="radio" name="slides" class="dots__radios slide-02">
+                <input type="radio" name="slides" class="dots__radios slide-03"    >
+                <input type="radio" name="slides" class="dots__radios slide-04">
+                <input type="radio" name="slides" class="dots__radios slide-05">
+                <input type="radio" name="slides" class="dots__radios slide-06">
             </div>
 
             <!-- control buttons -->
