--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
                     <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/07 ► slider sync - base - Copy.html">Slider sync</a>
                 </button>
                 <button class="index__button">
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 21/02 ► A dialog with three buttons - base.html">A dialog with three buttons</a>
+                </button>
+                <button class="index__button">
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 21/04 ► A message with auto close timer - base.html">A message with auto close timer</a>
+                </button>
+                <button class="index__button">
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 21/05 ► AJAX request example - base.html">AJAX request example</a>
+                </button>
+                <button class="index__button">
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 24/01 ► Amil m GitHub data to JSON.html">Get data JSON from GitHub</a>
+                </button>
+                <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
             </div>
