--- a/03 ■► JS DOM/tasks/2023 → 02 → 21/06 ► Custom dynamic modal - base.html
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 21/06 ► Custom dynamic modal - base.html
@@ -33,6 +33,14 @@
                     <button class="posBtn posBtn__pos-bl">◣</button>
                     <button class="posBtn posBtn__pos-br">◢</button>
                 </div>
+                <div class="customization__color">
+                    <label for="color">Change color:</label>
+                    <input class="color-pick" type="color" value="#eeeeee">
+                </div>
+                <div class="customization__input-text">
+                    <button class="customization__input-text--eh">Edit header</button>
+                    <button class="customization__input-text--et">Edit text</button>
+                </div>
             </div>
         </section>
 
