--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.html
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.html
@@ -35,17 +35,19 @@
             </div>
 
             <div class="dots">
-                <input type="radio" name="slides" class="dots__radios slide-01" checked>
-                <input type="radio" name="slides" class="dots__radios slide-02">
-                <input type="radio" name="slides" class="dots__radios slide-03"    >
-                <input type="radio" name="slides" class="dots__radios slide-04">
-                <input type="radio" name="slides" class="dots__radios slide-05">
-                <input type="radio" name="slides" class="dots__radios slide-06">
+                <input type="radio" name="radio-buttons" class="dots__radios slide-01" checked>
+                <input type="radio" name="radio-buttons" class="dots__radios slide-02">
+                <input type="radio" name="radio-buttons" class="dots__radios slide-03">
+                <input type="radio" name="radio-buttons" class="dots__radios slide-04">
+                <input type="radio" name="radio-buttons" class="dots__radios slide-05">
+                <input type="radio" name="radio-buttons" class="dots__radios slide-06">
             </div>
 
             <!-- control buttons -->
             <button class="btn btn-prev">◄</button>
             <button class="btn btn-next">►</button>
+
+            <button class="test-btn">■</button>
         </div>
         <script src="./01 ► single item slide.js"></script>
     </body>
