update February 27, 2023 at 14:29

--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/07 ► slider sync - base - Copy.html
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/07 ► slider sync - base - Copy.html
@@ -4,57 +4,40 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Slider sync</title>
+        <title>Single image</title>
         <link rel="stylesheet" href="./07 ► slider sync - sass - Copy.css">
     </head>
     <body>
         <div class="slider">
-            <!-- —————————— slide 1 —————————— -->
+            <!-- slide 1 -->
             <div class="slide">
-                <img src="./2023-02-22 assets/images/escape-from-tarkov.jpg" 
-                alt="eft-cover">
+                <img src="./asset-library/img-01.png" alt="img-01">
             </div>
-            <!-- —————————— slide 2 —————————— -->
+            <!-- slide 2 -->
             <div class="slide">
-                <img src="./2023-02-22 assets/images/grand-theft-auto-online.jpg" 
-                alt="gta-cover">
+                <img src="./asset-library/img-02.jpg" alt="img-02">
             </div>
-            <!-- —————————— slide 3 —————————— -->
+            <!-- slide 3 -->
             <div class="slide">
-                <img src="./2023-02-22 assets/images/arma-3.jpg" 
-                alt="armaiii-cover">
+                <img src="./asset-library/img-03.jpg" alt="img-03">
             </div>
-            <!-- —————————— slide 4 —————————— -->
+            <!-- slide 4 -->
             <div class="slide">
-                <img src="./2023-02-22 assets/images/call-of-duty-warzone-2_0.jpg" 
-                alt="codwz2-cover">
+                <img src="./asset-library/img-04.jpg" alt="img-04">
             </div>
-            <!-- —————————— slide 5 —————————— -->
+            <!-- slide 5 -->
             <div class="slide">
-                <img src="./2023-02-22 assets/images/cyberpunk-2077.jpg" 
-                alt="c2077-cover">
+                <img src="./asset-library/img-05.jpg" alt="img-05">
             </div>
-            <!-- —————————— slide 6 —————————— -->
+            <!-- slide 6 -->
             <div class="slide">
-                <img src="./2023-02-22 assets/images/metro-exodus.jpg" 
-                alt="metro-cover">
+                <img src="./asset-library/img-06.jpg" alt="img-06">
             </div>
-            <!-- —————————— slide 7 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/pubg-battlegrounds.jpg" 
-                alt="pubg-cover">
-            </div>
-            <!-- —————————— slide 8 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/fifa-22.jpeg" 
-                alt="fifa-cover">
-            </div>
-            <!-- —————————— ctrl button previous —————————— -->
+
+            <!-- control buttons -->
             <button class="btn btn-prev">◄</button>
-            <!-- —————————— ctrl button next —————————— -->
             <button class="btn btn-next">►</button>
         </div>
-
         <script src="./07 ► slider sync - algorithms - Copy.js"></script>
     </body>
 </html>
