--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="/03 ■► JS DOM/tasks/2023 → 02 → 21/06 ► Custom dynamic modal - base.html">Customizable pop-up</a>
                 </button>
                 <button class="index__button">
-                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item - base.html">Single item slider</a>
+                    <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.html">Single item slider</a>
                 </button>
                 <button class="index__button">
                     <a href="/03 ■► JS DOM/tasks/2023 → 02 → 22/04 ► multiple items with autoplay - base - Copy.html">Multiple items with autoplay</a>
