--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/05 ► center mode - base.html
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/05 ► center mode - base.html
@@ -4,57 +4,24 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Center mode</title>
+        <title>Document</title>
         <link rel="stylesheet" href="./05 ► center mode - sass.css">
     </head>
     <body>
-        <div class="slider">
-            <!-- —————————— slide 1 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/escape-from-tarkov.jpg" 
-                alt="eft-cover">
-            </div>
-            <!-- —————————— slide 2 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/grand-theft-auto-online.jpg" 
-                alt="gta-cover">
-            </div>
-            <!-- —————————— slide 3 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/arma-3.jpg" 
-                alt="armaiii-cover">
-            </div>
-            <!-- —————————— slide 4 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/call-of-duty-warzone-2_0.jpg" 
-                alt="codwz2-cover">
-            </div>
-            <!-- —————————— slide 5 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/cyberpunk-2077.jpg" 
-                alt="c2077-cover">
-            </div>
-            <!-- —————————— slide 6 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/metro-exodus.jpg" 
-                alt="metro-cover">
-            </div>
-            <!-- —————————— slide 7 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/pubg-battlegrounds.jpg" 
-                alt="pubg-cover">
-            </div>
-            <!-- —————————— slide 8 —————————— -->
-            <div class="slide">
-                <img src="./2023-02-22 assets/images/fifa-22.jpeg" 
-                alt="fifa-cover">
-            </div>
-            <!-- —————————— ctrl button previous —————————— -->
-            <button class="btn btn-prev">◄</button>
-            <!-- —————————— ctrl button next —————————— -->
-            <button class="btn btn-next">►</button>
-        </div>
+        <div class="container">
+            <h1 class="container__header">Lorem but not ipsum</h1>
 
+            <div class="container__slides">1</div>
+            <div class="container__slides">2</div>
+            <div class="container__slides">3</div>
+            <div class="container__slides">4</div>
+            <div class="container__slides">5</div>
+            <div class="container__slides">6</div>
+
+            <button class="btn-next">►</button>
+            <button class="btn-prev">◄</button>
+        </div>
+        
         <script src="./05 ► center mode - algorithms.js"></script>
     </body>
 </html>
