update March 1, 2023 at 01:34 AM

--- a/03 ■► JS DOM/tasks/2023 → 02 → 27/Task 5/05 ► simple game.html
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 27/Task 5/05 ► simple game.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Simple Game</title>
-        <!-- styles sheet link -->
-        <link rel="stylesheet" href="./05 ► simple game.css">
-    </head>
-    <body>
-        <!-- cintainer -->
-        <div class="container"></div>
-        <!-- javascript link -->
-        <script src="./05 ► simple game.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Falling Objects</title>
+    <!-- CSS LINK -->
+    <link rel="stylesheet" href="./05 ► simple game.css">
+</head>
+<body>
+    <!-- START BUTTON -->
+    <button class="start-button">START ► GAME</button>
+    <!-- SCRIPT LINK -->
+    <script src="./05 ► simple game.js"></script>
+</body>
 </html>
