--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     <a href="/03 ■► JS DOM/tasks/2023 → 02 → 24/01 ► Amil m GitHub data to JSON.html">Get data JSON from GitHub</a>
                 </button>
                 <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 02 → 27/Task 5/05 ► simple game.html">FALLING OBJECTS SIMPLE GAME TEST</a>
+                </button>
+                <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
             </div>
