--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/projectNameHere-homepage.html
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/projectNameHere-homepage.html
@@ -6,9 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>■ | Homepage</title>
         <!-- GOOGLE FONTS -->
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <!-- FONTAWESOME -->
-
+        <script src="https://kit.fontawesome.com/26c3179b26.js" crossorigin="anonymous"></script>
         <!-- STYLE SHEET -->
         <link rel="stylesheet" href="./projectNameHere-homepage.css">
     </head>
