update March 3, 2023 at 13:58

--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
                     <a href="./03 ■► JS DOM/tasks/2023 → 02 → 27/Task 5/05 ► simple game.html">FALLING OBJECTS SIMPLE GAME TEST</a>
                 </button>
                 <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/01 ► Close the hamburger menu when the user clicks outside of it.html">HMENU 1</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/02 ► Toggle the visibility of the hamburger menu when the user clicks on it.html">HMENU 2</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/03 ► Add an active class to the hamburger menu button when it is clicked.html">HMENU 3</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/04 ► Make the hamburger menu disappear when the user scrolls down.html">HMENU 4</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/05 ► Change the background color of the page when the hamburger menu is opened.html">HMENU 5</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/06 ► Implement a sliding animation for the hamburger menu.html">HMENU 6</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/07 ► Add a search functionality to the hamburger menu.html">HMENU 7</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/08 ► Create a keyboard accessible hamburger menu.html">HMENU 8</a>
+                </button>
+                <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
             </div>
