--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/hailhydra/hailhydra-about%us.html
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/hailhydra/hailhydra-about%us.html
@@ -12,7 +12,7 @@
         <!-- FONTAWESOME -->
         <script src="https://kit.fontawesome.com/26c3179b26.js" crossorigin="anonymous"></script>
         <!-- STYLE SHEET -->
-        <link rel="stylesheet" href="./projectNameHere-homepage.css">
+        <link rel="stylesheet" href=".">
     </head>
     <body>
         <header></header>
@@ -21,6 +21,6 @@
         <footer></footer>
         
         <!-- JS link -->
-        <script src="./projectNameHere-homepage.js"></script>
+        <script src="."></script>
     </body>
 </html>
