--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/hailhydra-homepage.html
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/hailhydra-homepage.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
+        <!-- META TAGS start -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- META TAGS end -->
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <title>Hail Hydra | Homepage</title>
-
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- GOOGLE FONTS start -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <!-- GOOGLE FONTS end -->
-
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- FONTAWESOME start -->
         <script src="https://kit.fontawesome.com/26c3179b26.js" crossorigin="anonymous"></script>
         <!-- FONTAWESOME end -->
-
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- STYLE SHEET start -->
         <link rel="stylesheet" href="./hailhydra-homepage.css">
         <!-- STYLE SHEET end -->
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
     </head>
     <body>
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- HEADER NAVIGATION BAR start -->
-        <header id="header"></header>
+        <header id="header">
+            <nav></nav>
+            <div></div>
+        </header>
         <!-- HEADER NAVIGATION BAR end -->
-
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- SECTION 1 start -->
         <section id="section1"></section>
         <!-- SECTION 1 end -->
-
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- SECTION 2 start -->
         <section id="section2"></section>
         <!-- SECTION 2 end -->
-
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- FOOTER start -->
         <footer id="footer">
             <div class="footer">
@@ -155,12 +164,18 @@
             </div>
         </footer>
         <!-- FOOTER end -->
-        
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- JavaScript LINK start -->
         <script src="./hailhydra-homepage.js"></script>
         <!-- JavaScript LINK end -->
-
-        <!-- TEMPORARY CLASS FOR FONTAWESOME ICONS start -->
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
+        <!-- POP-UP PAGES start -->
+        <section id="popups">
+            <div class="dicounts"></div>
+        </section>
+        <!-- POP-UP PAGES end -->
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
+        <!-- TEMPORARY CLASS FOR FONTAWESOME ICONS -->
         <div class="hidden">
             <i class="fa-solid fa-share-from-square fa-1x"></i> <!-- share product link with friends -->
             <i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i> <!-- log out -->
@@ -203,6 +218,5 @@
             <i class="fa-solid fa-layer-group fa-1x"></i> <!-- layers -->
             <i class="fa-regular fa-calendar fa-1x"></i> <!-- calendar -->
         </div>
-        <!-- TEMPORARY CLASS FOR FONTAWESOME ICONS end -->
     </body>
 </html>
