update March 5, 2023 at 13:55

--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.html
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- META TAGS end -->
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
-        <title>Hail Hydra | Homepage</title>
+        <title>Frondalize | Homepage</title>
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- GOOGLE FONTS start -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,31 +21,50 @@
         <!-- FONTAWESOME end -->
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- STYLE SHEET start -->
-        <link rel="stylesheet" href="./hailhydra-homepage.css">
+        <link rel="stylesheet" href="./frondalize-homepage.css">
         <!-- STYLE SHEET end -->
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
     </head>
     <body>
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
-        <!-- HEADER NAVIGATION BAR start -->
+        <!-- NAVIGATION BAR start -->
+        <nav id="nav">
+            <div class="nav"></div>
+        </nav>
+        <!-- NAVIGATION BAR end -->
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
+        <!-- HEADER start -->
         <header id="header">
-            <nav></nav>
-            <div></div>
+            <div class="header">
+                <div class="header__logo">
+                    <img class="header__logo--image" 
+                    src="./frondalize-assets/icons/frondalize-logo.png" 
+                    alt="frondalize-hlogo">
+                </div>
+            </div>
         </header>
-        <!-- HEADER NAVIGATION BAR end -->
+        <!-- HEADER end -->
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- SECTION 1 start -->
-        <section id="section1"></section>
+        <section id="section1">
+            <div class="section1namehere"></div>
+        </section>
         <!-- SECTION 1 end -->
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- SECTION 2 start -->
-        <section id="section2"></section>
+        <section id="section2">
+            <div class="section2namehere"></div>
+        </section>
         <!-- SECTION 2 end -->
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- FOOTER start -->
         <footer id="footer">
             <div class="footer">
-                <img src="./hailhydra-assets/icons/hail-hydra-logo.png" alt="hh-logo">
+                <ul class="footer__columns">
+                    <img class="footer__columns--logo" 
+                    src="./frondalize-assets/icons/frondalize-logo.png" 
+                    alt="frondalize-flogo">
+                </ul>
                 <ul class="footer__columns">
                     <h3 class="footer__columns--headers">Shopping</h3>
                     <li class="footer__columns--lists">
@@ -70,7 +89,7 @@
                     </li>
                 </ul>
                 <ul class="footer__columns">
-                    <h3 class="footer__columns--headers">Hail Hydra</h3>
+                    <h3 class="footer__columns--headers">Frondalize</h3>
                     <li class="footer__columns--lists">
                         <a href="#">
                             <i class="fa-solid fa-circle-info fa-1x"></i>
@@ -89,7 +108,7 @@
                     <li class="footer__columns--lists">
                         <a href="#">
                             <i class="fa-solid fa-hand-holding-dollar fa-1x"></i>
-                            Sell in Hail Hydra</a>
+                            Sell in Frondalize</a>
                     </li>
                     <li class="footer__columns--lists">
                         <a href="#">
@@ -165,15 +184,19 @@
         </footer>
         <!-- FOOTER end -->
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
-        <!-- JavaScript LINK start -->
-        <script src="./hailhydra-homepage.js"></script>
-        <!-- JavaScript LINK end -->
-        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- POP-UP PAGES start -->
         <section id="popups">
-            <div class="dicounts"></div>
+            <div class="overlay-bolder"></div>
+            <div class="overlay-blurbg"></div>
+            <div class="weeklydicounts"></div>
+            <div class="privacypolicy"></div>
+            <div class="termsofuse"></div>
         </section>
         <!-- POP-UP PAGES end -->
+        <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
+        <!-- JavaScript LINK start -->
+        <script src="./frondalize-homepage.js"></script>
+        <!-- JavaScript LINK end -->
         <!-- —————————— —————————— —————————— —————————— —————————— —————————— —————————— -->
         <!-- TEMPORARY CLASS FOR FONTAWESOME ICONS -->
         <div class="hidden">
