index html updated for JS DOM project | deadline 10 March 2023

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/08 ► Create a keyboard accessible hamburger menu.html">HMENU 8</a>
                 </button>
                 <button class="index__button">
-                    <a href="./03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/hailhydra-homepage.html">Hail Hydra</a>
+                    <a href="./03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.html">Frondalize e-Commerce project (HTML, CSS, JS)</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
