update March 7, 2023 at 16:53

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
                     <a href="./03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.html">Frondalize e-Commerce project (HTML, CSS, JS)</a>
                 </button>
                 <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 06/01 ► video player.html">Video player</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.html">Music player</a>
+                </button>
+                <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
             </div>
