--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
                     <a href="./03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.html">Music player</a>
                 </button>
                 <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 08/01 ► form sign in up.html">Form Sign in/up</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 08/02 ► form contact.html">Form Contact</a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 08/03 ► form adress.html">Form Address/a>
+                </button>
+                <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
             </div>
