update March 8, 2023 at 14:42

--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.html
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.html
@@ -658,6 +658,7 @@
             <i class="fa-solid fa-dollar-sign fa-1x"></i> <!-- usd -->
             <i class="fa-solid fa-layer-group fa-1x"></i> <!-- layers -->
             <i class="fa-regular fa-calendar fa-1x"></i> <!-- calendar -->
+            <i class="fa-solid fa-sort fa-1x"></i> <!-- sorting button maybe -->
         </div>
     </body>
 </html>
