update March 9, 2023 at 15:12

--- a/03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.html
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.html
@@ -11,14 +11,14 @@
         <div id="background">
             <div class="musicplayer">
                 <div class="musicplayer__content">
-                    <audio src="./asset library/mp3/clubbed to death - Matrix soundtrack.mp3"></audio>
+                    <audio src=""></audio>
                 </div>
                 <div class="musicplayer__title">TITLE HERE - 123 LOREM IPSUM</div>
                 <div class="musicplayer__timer">
-                    <span class="musicplayer__timer--current">1:23</span>
-                    <span class="musicplayer__timer--duration">_/_4:56</span>
+                    <span class="musicplayer__timer--current"></span> <!-- 1:23 -->
+                    <span class="musicplayer__timer--duration"></span> <!-- _/_4:56 -->
                 </div>
-                <img class="musicplayer__disc">
+                <div class="musicplayer__disc">
                     <img src="" alt="cover-img">
                 </div>
                 <div class="musicplayer__progressbar">
@@ -28,6 +28,12 @@
                     <button class="musicplayer__toolbar--prevsong btn"><<</button>
                     <button class="musicplayer__toolbar--playpause btn"></button>
                     <button class="musicplayer__toolbar--nextsong btn">>></button>
+                    <!-- <input type="range">
+                    <button class="musicplayer__toolbar--volume ">
+                        <i class="fa-solid fa-volume-xmark fa-1x hidden"></i> 
+                        <i class="fa-solid fa-volume-low fa-1x hidden"></i>
+                        <i class="fa-solid fa-volume-high fa-1x"></i>
+                    </button> -->
                 </div>
             </div>
         </div>
