--- a/03 ■► JS DOM/tasks/2023 → 03 → 08/01 ► form sign in up.html
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 08/01 ► form sign in up.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Log in | Register</title>
         <script src="https://kit.fontawesome.com/26c3179b26.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href=".">
+        <link rel="stylesheet" href="./01 ► form sign in up.css">
     </head>
     <body>
-        <script src="."></script>
+        <script src="./01 ► form sign in up.js"></script>
     </body>
 </html>
