--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <button class="index__button">
                     <a href="./03 ■► JS DOM/tasks/2023 → 03 → 03/08 ► Create a keyboard accessible hamburger menu.html">HMENU 8</a>
                 </button>
-                <button class="index__button">
+                <!-- <button class="index__button">
                     <a href="./03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.html">Frondalize e-Commerce project (HTML, CSS, JS)</a>
-                </button>
+                </button> -->
                 <button class="index__button">
                     <a href="./03 ■► JS DOM/tasks/2023 → 03 → 06/01 ► video player.html">Video player</a>
                 </button>
@@ -90,6 +90,9 @@
                 </button>
                 <button class="index__button">
                     <a href="./03 ■► JS DOM/tasks/2023 → 03 → 08/03 ► form adress.html">Form Address/a>
+                </button>
+                <button class="index__button">
+                    <a href="./03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html">Ploranza</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
