--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <a href="./03 ■► JS DOM/tasks/2023 → 03 → 08/02 ► form contact.html">Form Contact</a>
                 </button>
                 <button class="index__button">
-                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 08/03 ► form adress.html">Form Address/a>
+                    <a href="./03 ■► JS DOM/tasks/2023 → 03 → 08/03 ► form adress.html">Form Address</a>
                 </button>
                 <button class="index__button">
                     <a href="./03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html">Ploranza</a>
